--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "vitest": "^0.33.0"
   },
   "dependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.12.3",
     "@mdi/font": "^7.2.96",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
     "pinia": "^2.1.6",
     "sass": "^1.64.1",
+    "vue-i18n": "9",
     "vuetify": "^3.3.10"
   }
 }
