--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "coverage-ui": "vitest --coverage --ui"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@pinia/testing": "^0.1.3",
     "@types/node": "^18.17.0",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vitest/coverage-v8": "^0.34.4",
+    "@vitest/ui": "^0.34.4",
+    "@vue/test-utils": "^2.4.1",
+    "jsdom": "^22.1.0",
     "nuxt": "^3.6.5",
-    "vitest": "^0.33.0"
+    "vitest": "^0.34.3"
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.12.3",
