--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.12.3",
     "@mdi/font": "^7.2.96",
-    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
+    "@vueuse/core": "^10.5.0",
     "pinia": "^2.1.6",
     "sass": "^1.64.1",
     "vue-i18n": "9",
